@@ -6,7 +6,9 @@ Changes in quota-tools from 3.03 to 3.04
 * added -q <quotatab> and -c <configfile> options to warnquota(8) (Jan Kara)
 * added some notes about quotatab to warnquota manpage (Jan Kara) 
 * fixed bug in options parsing of warnquota(8) (Michael Meskes)
-* Ignore automount mountpoints (Philippe Troin)
+* ignore automount mountpoints (Philippe Troin)
+* fixed minor bug in printing grace times (Jan Kara)
+* fixed quotaon(8) behaviour when it sees newer kernel then it's able to handle (Jan Kara)
 
 Changes in quota-tools from 3.02 to 3.03
 
